force-app/main/default/objects/Eyeground_Investigation__c/Eyeground_Investigation__c.object-meta.xml
<CustomObject>
    <label>Eyeground Investigation</label>
    <nameField>
        <displayFormat>EI-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eyeground Investigation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>