force-app/main/default/objects/Eyeground_Investigation__c/fields/Arteries_left__c.field-meta.xml
<CustomField>
    <fullName>Arteries_left__c</fullName>
    <description>Артерии леввый глаз</description>
    <label>Arteries left</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>