force-app/main/default/objects/Eyeground_Investigation__c/fields/Arteries_right__c.field-meta.xml
<CustomField>
    <fullName>Arteries_right__c</fullName>
    <description>Артерии правый глаз</description>
    <label>Arteries right</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>