force-app/main/default/objects/Eyeground_Investigation__c/fields/Is_active__c.field-meta.xml
<CustomField>
    <fullName>Is_active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Служит ка флаг для того нужно ли отображать секцию Eyeground на документе или нет.</description>
    <label>Is active</label>
    <type>Checkbox</type>
</CustomField>