force-app/main/default/objects/Eyeground_Investigation__c/fields/Is_Ophthalmoscopically_Right__c.field-meta.xml
<CustomField>
    <fullName>Is_Ophthalmoscopically_Right__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ophthalmoscopically Right</label>
    <type>Checkbox</type>
</CustomField>