force-app/main/default/objects/Eyeground_Investigation__c/fields/MZ_right__c.field-meta.xml
<CustomField>
    <fullName>MZ_right__c</fullName>
    <description>MZ</description>
    <inlineHelpText>MZ</inlineHelpText>
    <label>MZ right</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>