force-app/main/default/objects/Eyeground_Investigation__c/fields/On_periphery_left__c.field-meta.xml
<CustomField>
    <fullName>On_periphery_left__c</fullName>
    <description>На переферии</description>
    <inlineHelpText>На переферии</inlineHelpText>
    <label>On periphery left</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>