force-app/main/default/objects/Eyeground_Investigation__c/fields/Optic_disk_right__c.field-meta.xml
<CustomField>
    <fullName>Optic_disk_right__c</fullName>
    <description>Диск зрительного нерва - ДЗН</description>
    <inlineHelpText>ДЗН</inlineHelpText>
    <label>Optic disk right</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>