force-app/main/default/objects/Eyeground_Investigation__c/fields/Vessels_right__c.field-meta.xml
<CustomField>
    <fullName>Vessels_right__c</fullName>
    <description>Сосуды</description>
    <inlineHelpText>Сосуды</inlineHelpText>
    <label>Vessels right</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>