force-app/main/default/objects/Eyeground_Investigation__c/fields/Viennas_right__c.field-meta.xml
<CustomField>
    <fullName>Viennas_right__c</fullName>
    <description>Вены</description>
    <inlineHelpText>Вены</inlineHelpText>
    <label>Viennas right</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>